tests/single_instruction_translation_validation/mcsema/register-variants/pabsw_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:199:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %17)
            ^
0.02user 0.00system 0:00.02elapsed 111%CPU (0avgtext+0avgdata 28112maxresident)k
0inputs+16outputs (0major+3288minor)pagefaults 0swaps
